eina: update to 1.0.0.beta2 eet: update to 1.4.0.beta2 evas: update to 1.0.0.beta2 ecore: update to 1.0.0.beta2 embryo: update to 1.0.0.beta2 edje: update to 1.0.0.beta2 e_dbus: update to 1.0.0.beta2 efreet: update to 1.0.0.beta2
git-svn-id: https://svn.macports.org/repository/macports/trunk@73406 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/e_dbus/Portfile
+++ b/dports/devel/e_dbus/Portfile
@@ -4,7 +4,7 @@
 PortSystem              1.0
 
 name                    e_dbus
-version                 1.0.0.beta
+version                 1.0.0.beta2
 maintainers             ryandesign openmaintainer
 categories              devel
 platforms               darwin
@@ -18,8 +18,8 @@ homepage                http://trac.enlightenment.org/e/wiki/E_Dbus
 master_sites            http://download.enlightenment.org/releases/
 use_bzip2               yes
 
-checksums               sha1    eb243a6e496b119a9844ba98c122aeda85fa1230 \
-                        rmd160  ab327aa3358f1fd7cb3c9ac54def77c5dfdf27ab
+checksums               sha1    347603e0924b2e78fbbc0370563ddfe762672fb4 \
+                        rmd160  79db15b4d729451845a563ff4f05d4e51dfaeb92
 
 depends_lib             port:ecore \
                         port:dbus
