--- a/dports/devel/eet/Portfile
+++ b/dports/devel/eet/Portfile
@@ -4,7 +4,7 @@
 PortSystem              1.0
 
 name                    eet
-version                 1.4.0.beta
+version                 1.4.0.beta2
 maintainers             ryandesign openmaintainer
 categories              devel x11
 platforms               darwin
@@ -24,8 +24,8 @@ homepage                http://trac.enlightenment.org/e/wiki/Eet
 master_sites            http://download.enlightenment.org/releases/
 use_bzip2               yes
 
-checksums               sha1    5ae660785a27e8a0419e51a94bde37db15e52605 \
-                        rmd160  6b30c26cff05e787747a07e2ba11bc1c1da2b2e6
+checksums               sha1    5562e5cd5ffb92c899913835b36f01d94eafd210 \
+                        rmd160  9f99be3adc67e3c72d04382919754e6a846776bc
 
 depends_lib             port:jpeg port:zlib port:eina port:openssl
 
