--- a/dports/devel/eina/Portfile
+++ b/dports/devel/eina/Portfile
@@ -4,7 +4,7 @@
 PortSystem              1.0
 
 name                    eina
-version                 1.0.0.beta
+version                 1.0.0.beta2
 categories              devel
 platforms               darwin
 maintainers             ryandesign openmaintainer
@@ -18,8 +18,8 @@ homepage                http://trac.enlightenment.org/e/wiki/Eina
 master_sites            http://download.enlightenment.org/releases/
 use_bzip2               yes
 
-checksums               sha1    a02474ae627f3a20cae5439f39c631c0447ae7d5 \
-                        rmd160  0e42052954c4e494a6e6ec875054e4b126ae0284
+checksums               sha1    f5c7fc6bd027a6865e7247489f126c54cc556d37 \
+                        rmd160  c4a29e9b621ccef55b2c690f3dbc38fd7d80516d
 
 depends_lib             port:libiconv
 
