--- a/dports/graphics/edje/Portfile
+++ b/dports/graphics/edje/Portfile
@@ -4,7 +4,7 @@ PortSystem              1.0
 
 name                    edje
 epoch                   1
-version                 1.0.0.beta
+version                 1.0.0.beta2
 maintainers             nomaintainer
 categories              graphics x11
 platforms               darwin
@@ -19,8 +19,8 @@ homepage                http://trac.enlightenment.org/e/wiki/Edje
 master_sites            http://download.enlightenment.org/releases/
 use_bzip2               yes
 
-checksums               sha1    f11537c5284a7550e1ac309a164d6ecb1e8cd069 \
-                        rmd160  810483c24aec6efe0dbdc7b4533d6f67f20a083e
+checksums               sha1    5fb8c2b319a492085ba459402919686fb9d320b0 \
+                        rmd160  eb7451a54983c2a174e10af572dd06318c55ba61
 
 depends_lib             port:ecore \
                         port:embryo \
