--- a/dports/devel/ecore/Portfile
+++ b/dports/devel/ecore/Portfile
@@ -4,7 +4,7 @@
 PortSystem              1.0
 
 name                    ecore
-version                 1.0.0.beta
+version                 1.0.0.beta2
 description             Ecore is a core event abstraction layer.
 long_description        It is the core event abstraction layer and \
                         X abstraction layer that makes doing selections, \
@@ -21,8 +21,8 @@ homepage                http://trac.enlightenment.org/e/wiki/Ecore
 master_sites            http://download.enlightenment.org/releases/
 use_bzip2               yes
 
-checksums               sha1    57d9ed899f0581504d64583708de58da076d7d64 \
-                        rmd160  f151e965621fdadb4c1ef1ad4f8747773e3dd72a
+checksums               sha1    d7c86fcb15515a157fb4332d88cf419d26f885c1 \
+                        rmd160  451f9b2e365c7ac3a65a30f000c825c54c4d6ce9
 
 depends_lib             port:evas \
                         port:curl
