--- a/dports/devel/embryo/Portfile
+++ b/dports/devel/embryo/Portfile
@@ -4,7 +4,7 @@
 PortSystem              1.0
 
 name                    embryo
-version                 1.0.0.beta
+version                 1.0.0.beta2
 maintainers             ryandesign openmaintainer
 categories              devel lang
 platforms               darwin
@@ -23,8 +23,8 @@ homepage                http://trac.enlightenment.org/e/wiki/Embryo
 master_sites            http://download.enlightenment.org/releases/
 use_bzip2               yes
 
-checksums               sha1    3cf9edb4716cf96d92abdb78deb2f62a3a91032d \
-                        rmd160  c7743745848e3fa14450e7a3163c389f26e7fe62
+checksums               sha1    517cda5d9e69326816567cbd4056c36174ecaeb8 \
+                        rmd160  b65df110e8047e36fcf4b04211ac102d498e4bc9
 
 use_parallel_build      yes
 
