--- a/dports/devel/evas/Portfile
+++ b/dports/devel/evas/Portfile
@@ -4,7 +4,7 @@
 PortSystem              1.0
 
 name                    evas
-version                 1.0.0.beta
+version                 1.0.0.beta2
 categories              devel x11
 platforms               darwin
 maintainers             ryandesign openmaintainer
@@ -18,8 +18,8 @@ long_description        Evas is a hardware-accelerated canvas API for \
                         pixmaps, lines and rectangles for speed if your CPU \
                         or graphics hardware are too slow.
 
-checksums               sha1    0bdef4fdeb3a0a787771f8ac044e2354a1937214 \
-                        rmd160  ff2a8e96cc39dfea399cf040cc660b9bd01e1ae5
+checksums               sha1    b4ea2283b902a23fcb1bbc2343a8744e005fbe7f \
+                        rmd160  ca76bfddd453db6d748df3abb6f0997915c7bf25
 
 homepage                http://trac.enlightenment.org/e/wiki/Evas
 master_sites            http://download.enlightenment.org/releases/
