--- a/dports/x11/efreet/Portfile
+++ b/dports/x11/efreet/Portfile
@@ -4,7 +4,7 @@
 PortSystem              1.0
 
 name                    efreet
-version                 1.0.0.beta
+version                 1.0.0.beta2
 maintainers             ryandesign openmaintainer
 categories              x11
 platforms               darwin
@@ -20,8 +20,8 @@ homepage                http://trac.enlightenment.org/e/wiki/Efreet
 master_sites            http://download.enlightenment.org/releases/
 use_bzip2               yes
 
-checksums               sha1    4b2b0cba1638bb70fe246b0e9701dce54becb810 \
-                        rmd160  a2589aff4bdb9fefcb93c7bbea819595e001e9a5
+checksums               sha1    8b8989e7b9149c77fe6bd1c75bde9ec429075e01 \
+                        rmd160  5ff8f181162533cb4f723a31176a7bcffd2cb2a5
 
 depends_lib             port:ecore
 
