--- a/dports/graphics/edje/Portfile
+++ b/dports/graphics/edje/Portfile
@@ -5,7 +5,7 @@ PortSystem              1.0
 name                    edje
 epoch                   1
 version                 1.0.0.beta2
-maintainers             nomaintainer
+maintainers             ryandesign openmaintainer
 categories              graphics x11
 platforms               darwin
 
