docbook-xsl: update to 1.76.1, fix livecheck, and delete doc variant and instead always install documentation; see #27160
git-svn-id: https://svn.macports.org/repository/macports/trunk@73411 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/docbook-xsl/Portfile
+++ b/dports/textproc/docbook-xsl/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name        docbook-xsl
-version     1.75.2
+version     1.76.1
 categories  textproc
 description The docbook xsl stylesheets
 long_description \
@@ -17,14 +17,14 @@ depends_run port:xmlcatmgr
 
 use_bzip2   yes
 
+distfiles-append [suffix ${name}-doc-${version}]
+
 checksums       [suffix $distname] \
-                md5     0c76a58a8e6cb5ab49f819e79917308f \
-                sha1    cd146012c07f3c2c79c1cd927ad1faf5bee6cc74 \
-                rmd160  2e297bd1ce0d480b6f8ea03846a8f8c0100b72dd \
+                sha1    dc9fa422c53e0a4f0e32b5c8ec896b39080bc14d \
+                rmd160  83acc9ba6dc4df04cef98988cf007d8168301431 \
                 [suffix $name-doc-$version] \
-                md5     0a59c4c1796683fca32881c221df0b16 \
-                sha1    2befba14b0cfe748dec4bc8b7b891cbb2f394767 \
-                rmd160  d67aeeb3e84e7b55f6d60cf3bd5b84fab83ce2fe
+                sha1    d6b22c817c8aa31b9bd7a4f4703a5aee2ee3ecbb \
+                rmd160  5e083ff9c69481f378145cfb0661f10fdc93b3b2
 
 supported_archs noarch
 use_configure   no
@@ -33,7 +33,7 @@ set srcxslpaths "catalog.xml common eclipse extensions fo highlighting \
                 html htmlhelp images javahelp lib manpages params \
                 profiling roundtrip slides template tools xhtml VERSION"
 set srcdocpaths "BUGS README RELEASE-NOTES.html RELEASE-NOTES.xml \
-                TODO VERSION NEWS COPYING"
+                TODO VERSION NEWS COPYING doc"
 set instxsldir  "share/xsl/${name}"
 set instdocdir  "share/doc/${name}"
 
@@ -87,9 +87,6 @@ post-deactivate {
     system "xmlcatmgr remove nextCatalog ${prefix}/${instxsldir}/catalog.xml"
 }
 
-variant doc description {Install full DocBook XSL documentation} {
-    distfiles-append    [suffix ${name}-doc-${version}]
-    lappend srcdocpaths doc
-}
-
-livecheck.distname  ${name}
+livecheck.type      regex
+livecheck.url       http://sourceforge.net/projects/docbook/files/
+livecheck.regex     /docbook-xsl-(\[0-9.\]+)${extract.suffix}
