--- a/dports/python/py26-gobject/Portfile
+++ b/dports/python/py26-gobject/Portfile
@@ -7,6 +7,7 @@ name            py26-gobject
 platforms       darwin
 set my_name     pygobject
 version         2.26.0
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 categories      python gnome
 maintainers     mcalhoun openmaintainer
@@ -45,6 +46,8 @@ configure.args-append \
     --disable-introspection
 
 configure.python    ${prefix}/bin/python2.6
+
+patchfiles     patch-gi_pygi.h
 
 post-destroot {
     set docdir ${prefix}/share/doc/${name}
