kmymoney4: supply patch to make HBCI work (kbanking plugin)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73414 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kmymoney4/Portfile
+++ b/dports/kde/kmymoney4/Portfile
@@ -8,7 +8,7 @@ PortGroup           kde4    1.1
 
 name                kmymoney4
 version             4.5
-revision            3
+revision            4
 
 categories          kde finance
 maintainers         mk pixilla.com:brad openmaintainer
@@ -49,9 +49,15 @@ So far known problems are:                     \n \
  - some reports let the app hang               \n \
  - some fonts seem to be missing, since        \n \
    layout looks inhomogenious                  \n \
- - kmm_banking plugin doesn't work yet         \n \
                                                \n \
 ============================================== \n \
 "
 }
+
+patchfiles        patch_for_kbanking.diff
+
+patch.dir         ${workpath}/${distname}
+patch.pre_args    -p1
+
+configure.args-append   -DENABLE_KBANKING=ON
 
