--- a/dports/devel/libassuan/Portfile
+++ b/dports/devel/libassuan/Portfile
@@ -27,6 +27,10 @@ checksums   md5     53a7d4c22af909d7236d17d454ef935b\
 depends_lib port:pth \
             port:libgpg-error
 
+# ticket #26626
+patchfiles  tests_Makefile.am.diff
+use_autoreconf     yes
+
 use_parallel_build yes
 
 test.run    yes
