phonon: build debug_and_release correctly (have to use "build_all").
git-svn-id: https://svn.macports.org/repository/macports/trunk@73417 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/phonon/Portfile
+++ b/dports/audio/phonon/Portfile
@@ -119,10 +119,17 @@ post-patch {
     unset PRIVATE_HEADERS
 }
 
-# set arch type(s); done is a stage to make sure the 'options
-# qt_arch_types' is evaluated -after- +universal (if selected).
 pre-configure {
-    configure.pre_args-append  CONFIG+="${qt_arch_types}"
+    # set arch type(s); done is a stage to make sure the 'options
+    # qt_arch_types' is evaluated -after- +universal (if selected).
+    configure.pre_args-append CONFIG+="${qt_arch_types}"
+
+    # set build type
+    set build_type "release"
+    if {[variant_isset debug]} {
+        set build_type "debug_and_release build_all"
+    }
+    configure.pre_args-append CONFIG+=\"${build_type}\"
 }
 
 # set up to use the installed QMake files
@@ -136,12 +143,6 @@ configure.pre_args  \
     LOCAL_BUILD_TREE=${PHONON_BUILD_DIR}
 configure.args      "-o Makefile phonon.pro"
 configure.universal_args
-
-if {[variant_isset debug]} {
-    configure.pre_args-append CONFIG+=debug_and_release
-} else {
-    configure.pre_args-append CONFIG+=release
-}
 
 # allow ccache, if specified by the user
 pre-build {
