--- a/dports/graphics/cairo-devel/Portfile
+++ b/dports/graphics/cairo-devel/Portfile
@@ -95,6 +95,10 @@ variant quartz {
 }
 }
 
+platform darwin 9 {
+    configure.compiler      gcc-4.2
+}
+
 variant no_x11 conflicts opengl x11_xcb {
     depends_lib-delete      port:xrender
     archcheck.files-delete  lib/libXrender.dylib
