detex: support universal and non-default-build_arch builds, and ensure we're UsingTheRightCompiler; see #27297
git-svn-id: https://svn.macports.org/repository/macports/trunk@73420 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/tex/detex/Portfile
+++ b/dports/tex/detex/Portfile
@@ -16,7 +16,6 @@ extract.cmd             tar
 extract.pre_args        -xf
 extract.post_args
 use_configure           no
-universal_variant       no
 use_parallel_build      yes
 
 description \
@@ -32,6 +31,15 @@ checksums \
 
 patchfiles \
     patch-Makefile.diff
+
+variant universal {}
+if {[variant_isset universal]} {
+    set archflags ${configure.universal_cflags}
+} else {
+    set archflags ${configure.cc_archflags}
+}
+
+build.args              CC="${configure.cc} ${archflags}"
 
 destroot {
     xinstall -W ${worksrcpath} detex ${destroot}${prefix}/bin
