tk: set supported_archs correctly when quartz variant is set, see #20799
git-svn-id: https://svn.macports.org/repository/macports/trunk@73421 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/tk/Portfile
+++ b/dports/x11/tk/Portfile
@@ -14,6 +14,11 @@ long_description \
   Ousterhout, Addison-Wesley, ISBN 0-201-63337-X.
 
 platforms       darwin
+# tk/aqua can't build 64-bit, ticket #20799
+if {[variant_isset quartz]} {
+    supported_archs i386 ppc
+}
+
 master_sites    sourceforge:tcl
 dist_subdir     tcltk
 distname        ${name}${version}-src
@@ -53,7 +58,7 @@ post-destroot {
     ln -s libtk8.5.dylib ${destroot}${prefix}/lib/libtk.dylib
 }
 
-if {$build_arch == "x86_64" || $build_arch == "ppc64"} {
+if {${configure.build_arch} == "x86_64" || ${configure.build_arch} == "ppc64"} {
     configure.args-append   --enable-64bit
 }
 
