--- a/dports/aqua/fltk-devel/Portfile
+++ b/dports/aqua/fltk-devel/Portfile
@@ -1,12 +1,11 @@
 # -*- Mode: Tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:filetype=tcl:et:sw=4:ts=4:sts=4
-# $Id$
+# $Id: $
 
 PortSystem      1.0
 
-name            fltk
-conflicts       fltk-devel
-version         1.1.10
-revision        2
+name            fltk-devel
+conflicts       fltk
+version         1.3.x-r7794
 categories      aqua devel
 platforms       macosx
 maintainers     nomaintainer
@@ -26,25 +25,31 @@ long_description \
     that can be used to create applications in minutes.
 
 homepage        http://www.fltk.org/
-master_sites    http://ftp.easysw.com/pub/fltk/${version}/
+master_sites    http://ftp.easysw.com/pub/fltk/snapshots/
 worksrcdir      ${name}-${version}
-distname        ${worksrcdir}-source
+distname        fltk-${version}
 use_bzip2       yes
 
-checksums       md5     a1765594bc427ff892e36089fe1fa672 \
-                sha1    0d2b34fede91fa78eeaefb893dd70282f73908a8 \
-                rmd160  f8fc4371811efcc0d6fc73edd0525d8ff87a4faa
+checksums       md5     1500dacd85587b02aa6009090c661ccb \
+                sha1    cb6ed7681b81a5126dcec8be57ac4cb39aef0243 \
+                rmd160  668f3b5cad382d72495400e9dadb37b62147f2e4
 
 depends_lib     port:jpeg \
                 port:libpng \
                 port:zlib
 
+worksrcdir      ${distname}
+
 use_parallel_build  yes
 
 post-patch {
-    reinplace "s|/Applications|${applications_dir}/${name}|g" \
+    # set .app directory
+    reinplace "s|/Applications|${applications_dir}/fltk|g" \
         ${worksrcpath}/fluid/Makefile \
         ${worksrcpath}/test/Makefile
+
+    # allow for 64-bit installs
+    reinplace "s| -arch i386||g" ${worksrcpath}/configure
 }
 
 pre-configure {
@@ -61,17 +66,14 @@ configure.universal_cflags
 configure.universal_cppflags
 configure.universal_cxxflags
 configure.universal_ldflags
-configure.args  --enable-threads \
-                --enable-shared \
+configure.args  --enable-shared \
                 --mandir=${prefix}/share/man
 
 destroot.target install \
                 install-desktop
 
-# Force 32-bit (#21054)
-supported_archs i386 ppc
-universal_variant no
+universal_variant   yes
 
 livecheck.type  regexm
 livecheck.url   ${homepage}
-livecheck.regex "Stable Release.*?\n.*?VERSION=(\\d+(\\.\\d+)*)'"
+livecheck.regex "Developmental Release.*?\n.*?VERSION=(\\d+(\\.\\d+)*)'"
