aqbanking5: add livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@73426 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/aqbanking5/Portfile
+++ b/dports/devel/aqbanking5/Portfile
@@ -56,3 +56,8 @@ variant enable_local_install description "Enable local installation mode (plugin
 }
 
 use_parallel_build no
+
+livecheck.type    regex
+livecheck.url     http://www2.aquamaniac.de/sites/download/packages.php?package=03&showall=1
+livecheck.regex   aqbanking-(\[0-9.\]*)\\.tar
+
