avahi: provide a no_gtk variant (to avoid inclusing of a tail of X11 port)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73429 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/avahi/Portfile
+++ b/dports/net/avahi/Portfile
@@ -4,6 +4,7 @@ PortSystem      1.0
 
 name            avahi
 version         0.6.28
+revision        1
 categories      net devel
 maintainers     nomaintainer
 platforms       darwin
@@ -110,6 +111,13 @@ variant mono description {Enable Mono support} {
 
 variant test description {Build tests} {
     configure.args-append   --enable-tests
+}
+
+variant no_gtk description {Build without GTK2} {
+    depends_lib-delete      port:libglade2 \
+                            port:py26-gtk
+
+    configure.args-append   --disable-gtk
 }
 
 livecheck.type  regex
