avahi: no_gtk variant needs also to disable pygtk
git-svn-id: https://svn.macports.org/repository/macports/trunk@73430 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/avahi/Portfile
+++ b/dports/net/avahi/Portfile
@@ -4,7 +4,7 @@ PortSystem      1.0
 
 name            avahi
 version         0.6.28
-revision        1
+revision        2
 categories      net devel
 maintainers     nomaintainer
 platforms       darwin
@@ -117,7 +117,8 @@ variant no_gtk description {Build without GTK2} {
     depends_lib-delete      port:libglade2 \
                             port:py26-gtk
 
-    configure.args-append   --disable-gtk
+    configure.args-append   --disable-gtk \
+                            --disable-pygtk
 }
 
 livecheck.type  regex
