xorg-xtrans: Bump to 1.2.6
git-svn-id: https://svn.macports.org/repository/macports/trunk@73437 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/xorg-xtrans/Portfile
+++ b/dports/x11/xorg-xtrans/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name		xorg-xtrans
-version		1.2.5
+version		1.2.6
 categories	x11 devel
 maintainers	jeremyhu openmaintainer
 description	X.org xtrans
@@ -14,10 +14,44 @@ long_description X Network Transport layer shared code
 master_sites	http://xorg.freedesktop.org/archive/individual/lib/
 
 distname	xtrans-${version}
-checksums           md5     2d1e57e82acc5f21797e92341415af2f \
-                    sha1    e8c4ce58b42d05e613fe535319a7d7f45f30f3e9 \
-                    rmd160  81e86fcbc0b6ea6b7da80f3de2146571f6d07f71
+checksums           md5     c66f9ffd2da4fb012220c6c40ebc7609 \
+                    sha1    99f019a6e6d4d2b8274c4a27f9c8482c7fc64e85 \
+                    rmd160  88a26d0fb38d3440081fa9541b01dc2622321e43
 use_bzip2	yes
+
+configure.args \
+	--without-xmlto \
+	--without-fop \
+	--disable-docs
+
+build.args V=1
+
+# Depending on ghostscript for the PDF documentation creates a dependency
+# loop, so you may want to install first without the docs variant
+variant docs description "Install extra documentation" {
+	depends_build-append \
+		port:fop \
+		port:xmlto \
+		port:xorg-sgml-doctools
+
+	depends_skip_archcheck-append \
+		fop \
+		xmlto
+
+	configure.args-delete \
+		--without-xmlto \
+		--without-fop \
+		--disable-docs
+
+	configure.args-append \
+		--with-xmlto \
+		--with-fop \
+		--enable-docs
+
+	configure.env-append \
+		XMLTO="${prefix}/bin/xmlto" \
+		FOP="${prefix}/bin/fop"
+}
 
 livecheck.type  regex
 livecheck.url   [lindex ${master_sites} 0]?C=M&O=D
