--- a/dports/x11/xorg-sgml-doctools/Portfile
+++ b/dports/x11/xorg-sgml-doctools/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name		xorg-sgml-doctools
-version		1.5
+version		1.5.99.901
 categories	x11 textproc
 maintainers	jeremyhu openmaintainer
 description	X.org xorg-sgml-doctools
@@ -13,14 +13,14 @@ long_description SGML Magic for X11 documentation
 supported_archs noarch
 master_sites	 http://xorg.freedesktop.org/archive/individual/doc/
 
-checksums           md5     1cd2d8213ee71ebdbefce45c9da54762 \
-                    sha1    16c70d7fb704309b7c9f2c05c226ea131b6e9088 \
-                    rmd160  090e7eb4976ee67d41cfebc4f85a298ccf94805c
+checksums           md5     6c415566a88f787261bcde73440e5ef0 \
+                    sha1    64d254d6dd48bffec72336aa5466e231df985adb \
+                    rmd160  a76d7ce24c3400de5fbc140fda00c760c5c23b55
 
 use_bzip2	yes
 use_parallel_build      yes
 
-depends_build   port:pkgconfig \
+depends_build   port:pkgconfig
 
 build.args V=1
 
