--- a/dports/x11/xscope/Portfile
+++ b/dports/x11/xscope/Portfile
@@ -3,8 +3,7 @@
 PortSystem          1.0
 
 name                xscope
-version             1.2
-revision            1
+version             1.3
 categories          x11
 platforms           darwin
 maintainers         jeremyhu openmaintainer
@@ -14,23 +13,16 @@ long_description    ${description}
 homepage            http://www.x.org
 master_sites        http://xorg.freedesktop.org/archive/individual/app/
 
-checksums           md5     1a9df0ac0dd5a2c2a7948dcf48d126c3 \
-                    sha1    3952f381c3f8ee81cd602e6f025304c2322a06a0 \
-                    rmd160  040f3f6f38aed7f41380cd3e80756fd2360f7cad
+checksums           md5     4198c875ebc4808b73fa5468e009f14b \
+                    sha1    228773993bf1e5b4b4a772205e550e81f41e8fd9 \
+                    rmd160  876ca1e8bbd805cd8ed8046446873faaa5007b8e
 
 use_bzip2	    yes
 use_parallel_build  yes
 
 depends_build \
 	port:pkgconfig \
-	port:xorg-xtrans \
-	port:xorg-util-macros
-
-use_autoreconf yes
-autoreconf.args -fvi
-
-patchfiles 0001-Allow-a-configure-option-to-build-without-xtrans-dis.patch
-patch.pre_args -p1
+	port:xorg-xtrans
 
 configure.args --disable-xtrans
 
