editors/vim-app: Disable patch 7.3.021, build was broken on Tiger and Leopard, fixes #26792
git-svn-id: https://svn.macports.org/repository/macports/trunk@73450 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/editors/vim-app/Portfile
+++ b/dports/editors/vim-app/Portfile
@@ -7,6 +7,7 @@ set realname        vim
 set vim_version     7.3
 set vim_patchlevel  47
 version             ${vim_version}.${vim_patchlevel}
+revision            1
 categories          editors
 maintainers         raimue
 description         Vim.app is a GUI version of the famous editor vim.
@@ -40,6 +41,8 @@ while {$low <= $patchlevel} {
         incr low 1
     }
 }
+# 7.3.021 disabled, #26792
+patchfiles-delete 7.3.021
 
 checksums \
   vim-${vim_version}${extract.suffix} \
@@ -51,6 +54,7 @@ checksums \
   doc.tar.gz \
     md5 692f7874fc617162d0fe110daf39a98a
 
+# 7.3.021 disabled, #26792
 checksums-append \
     7.3.001 md5 aa5582d8289b43255f45d4bb6f62e140 \
     7.3.002 md5 2949cbdfe86f533c487fd144c5935c7a \
@@ -72,7 +76,6 @@ checksums-append \
     7.3.018 md5 02270ecbc1dc2f57de80441ac7cdd0f0 \
     7.3.019 md5 5c1be1a0a107261e0a716c877c82fc97 \
     7.3.020 md5 ef09917435a7cab9382abe3708cf5152 \
-    7.3.021 md5 53c90651baf1b4b28c99947de58deb91 \
     7.3.022 md5 c4cb1bf3fa0a45d9cad997cd02fa9439 \
     7.3.023 md5 1e34e216b0e419096f796d3511ce88da \
     7.3.024 md5 5c2ff27d8ce8d1aeb42ff16ca1cb89c2 \
