gwenhywfar: disable livecheck, since 3.11.3 is the last one working with kmymoney 1.0.5
git-svn-id: https://svn.macports.org/repository/macports/trunk@73454 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/gwenhywfar/Portfile
+++ b/dports/devel/gwenhywfar/Portfile
@@ -37,6 +37,4 @@ variant enable_local_install description "Enable local installation mode (plugin
     configure.args-append   --enable-local-install 
 }
 
-livecheck.type    regex
-livecheck.url     http://www2.aquamaniac.de/sites/download/packages.php?package=01&showall=1
-livecheck.regex   ${name}-(\[0-9.\]*)\\.tar
+livecheck.type    none
