aqbanking: no livecheck since version 4.2.4 is the last one working with kmymoney 1.0.5
git-svn-id: https://svn.macports.org/repository/macports/trunk@73456 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/aqbanking/Portfile
+++ b/dports/devel/aqbanking/Portfile
@@ -81,3 +81,6 @@ variant enable_local_install description "Enable local installation mode (plugin
 }
 
 use_parallel_build no
+
+livecheck.type     none
+
