--- a/dports/net/curl-ca-bundle/Portfile
+++ b/dports/net/curl-ca-bundle/Portfile
@@ -6,6 +6,7 @@ PortSystem              1.0
 name                    curl-ca-bundle
 # keep the version in sync with the curl port
 version                 7.21.2
+revision                1
 set curl_name           curl
 categories              net
 maintainers             ryandesign
@@ -19,8 +20,8 @@ distname                ${curl_name}-${version}
 dist_subdir             ${curl_name}
 set curl_source         ${distname}${extract.suffix}
 set certdata_file       certdata.txt
-set certdata_version    1.65
-set certdata_date       2010-08-27
+set certdata_version    1.66
+set certdata_date       2010-11-12
 set certdata_distfile   certdata-${certdata_version}.txt
 set certdata_path       security/nss/lib/ckfw/builtins/${certdata_file}
 build.target            ca-bundle
@@ -53,9 +54,8 @@ checksums \
         sha1    f729552a905033dbd0d2cf56e40c7048f2d8331e \
         rmd160  fcb1302f79741bc3e488fcee1206284f4cb9e6ca \
     ${certdata_distfile} \
-        md5     b93bd8dd813e4b0c12ddcc44dbfe1dbf \
-        sha1    774c0132ac6920a4f37ce670bed4abcb6e21476c \
-        rmd160  5af26ece6f3e379b247ac8da565d41ff36768972
+        sha1    0ca2a470922249ec6877473e03eaad293b4cfb45 \
+        rmd160  baddb9c10101cbf38ebe05ecc5ab3739f98595fd
 
 depends_build \
     path:bin/perl:perl5
