dovecot2: maintainer udpate to 2.0.7 and add postgresql90 variant; see #27239
git-svn-id: https://svn.macports.org/repository/macports/trunk@73459 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/mail/dovecot2/Portfile
+++ b/dports/mail/dovecot2/Portfile
@@ -6,7 +6,7 @@ PortSystem          1.0
 name                dovecot2
 set base_name       dovecot
 conflicts           ${base_name}
-version             2.0.4
+version             2.0.7
 set branch          [join [lrange [split ${version} .] 0 1] .]
 categories          mail
 maintainers         pixilla.com:brad
@@ -23,8 +23,8 @@ master_sites        ${homepage}releases/${branch}
 
 distname            ${base_name}-${version}
 
-checksums           sha1    18c471e991d49424c9dd7d40f3899ea602f57bbc \
-                    rmd160  a3360158bb1242b009397e1c1180ccf9585eb547
+checksums           sha1    3aab6cee878bd02e364aebcb70741bf1e4affc0d \
+                    rmd160  b284c99630935e87b124f48f132970a14737c985
 
 depends_build       port:pkgconfig
 depends_lib         port:libiconv \
@@ -72,21 +72,27 @@ pre-install {
     }
 }
 
-variant postgresql82 conflicts postgresql83 postgresql84 description {Enable PostgreSQL 8.2 support} {
+variant postgresql82 conflicts postgresql83 postgresql84 postgresql90 description {Enable PostgreSQL 8.2 support} {
     depends_lib-append          port:postgresql82
     configure.env-append        PG_CONFIG=${prefix}/lib/postgresql82/bin/pg_config
     configure.args-append       --with-pgsql
 }
 
-variant postgresql83 conflicts postgresql82 postgresql84 description {Enable PostgreSQL 8.3 support} {
+variant postgresql83 conflicts postgresql82 postgresql84 postgresql90 description {Enable PostgreSQL 8.3 support} {
     depends_lib-append          port:postgresql83
     configure.env-append        PG_CONFIG=${prefix}/lib/postgresql83/bin/pg_config
     configure.args-append       --with-pgsql
 }
 
-variant postgresql84 conflicts postgresql82 postgresql83 description {Enable PostgreSQL 8.4 support} {
+variant postgresql84 conflicts postgresql82 postgresql83 postgresql90 description {Enable PostgreSQL 8.4 support} {
     depends_lib-append          port:postgresql84
     configure.env-append        PG_CONFIG=${prefix}/lib/postgresql84/bin/pg_config
+    configure.args-append       --with-pgsql
+}
+
+variant postgresql90 conflicts postgresql82 postgresql83 postgresql84 description {Enable PostgreSQL 9.0 support} {
+    depends_lib-append          port:postgresql90
+    configure.env-append        PG_CONFIG=${prefix}/lib/postgresql90/bin/pg_config
     configure.args-append       --with-pgsql
 }
 
