--- a/dports/devel/jam/Portfile
+++ b/dports/devel/jam/Portfile
@@ -1,10 +1,11 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem			1.0
 name				jam
 version				2.5
 # The version didn't change, but the binary did because it was upgraded from rc3 to 2.5.
-revision			1
+revision			2
 categories			devel
 maintainers			nomaintainer
 description			a software build tool like make
@@ -25,47 +26,76 @@ checksums			md5 c7eb7719d8523c0f819116479492d367 \
 					rmd160 34497c89ca4bbd1db049627e2dfcc1287138af24
 platforms			darwin
 
+universal_variant   yes
+
 # This is a .tar file.
 extract.cmd			tar -xf 
 extract.pre_args	
 extract.post_args	
 
-# Enables optimization & Matt Armstrong memory leak patch.
+# Enables post-patch options & Matt Armstrong memory leak patch.
 patchfiles			patch-Makefile.diff \
 					patch-variable.c.diff
 
+post-patch {
+    # fix up reminder of Makefile, depending on variants
+    set EXTRA ""
+    set CFLAGS "-O3"
+    if {[variant_isset debug]} {
+        set CFLAGS "-O0"
+        set EXTRA "-sDEBUG=1"
+    } elseif {[variant_isset mw]} {
+        set CFLAGS "-opt all"
+        set EXTRA "-sCC=mwccppc"
+    }
+    reinplace "s|@CFLAGS@|${CFLAGS}|g" ${worksrcpath}/Makefile
+    reinplace "s|@EXTRA@|${EXTRA}|g" ${worksrcpath}/Makefile
+
+    # fix up Jamfile to always install to the same directory, no
+    # matter if debug or regular build
+    reinplace "s@/g@@g" ${worksrcpath}/Jamfile
+}
+
 # Jam doesn't have a configure script
-use_configure		no
+use_configure no
+
+pre-build {
+    # set archflags into CFLAGS for compiling
+    set CFLAGS ${configure.cc_archflags}
+    if {[variant_isset universal]} {
+        set CFLAGS [join ${configure.universal_archs} " -arch "]
+        set CFLAGS "-arch ${CFLAGS}"
+    }
+    build.cmd CFLAGS=\"${CFLAGS}\" ${build.cmd}
+}
 
 # Installation.
 destroot {
-	file mkdir ${destroot}${prefix}/share/doc/${name}
-	system "install -m 755 ${worksrcpath}/bin.*/jam ${destroot}${prefix}/bin/"
-	system "install -m 755 ${worksrcpath}/bin.*/mkjambase ${destroot}${prefix}/bin/"
-	xinstall -d -m 755 ${destroot}${prefix}/share/doc/${name}/
-	xinstall -m 644 ${worksrcpath}/Jam.html ${destroot}${prefix}/share/doc/${name}/
-	xinstall -m 644 ${worksrcpath}/Jambase.html ${destroot}${prefix}/share/doc/${name}/
-	xinstall -m 644 ${worksrcpath}/Jamfile.html ${destroot}${prefix}/share/doc/${name}/
+    # retrieve directory name where files are installed
+    # (there is only 1 with the name "bin*")
+    set bindir [exec find ${worksrcpath} -name "bin*"]
+
+    # install binaries
+    xinstall -d -m 755 ${destroot}${prefix}/bin
+    xinstall -m 755 ${bindir}/jam ${destroot}${prefix}/bin
+    xinstall -m 755 ${bindir}/mkjambase ${destroot}${prefix}/bin
+
+    # install library
+    xinstall -d -m 755 ${destroot}${prefix}/lib
+    xinstall -m 644 ${bindir}/libjam.a ${destroot}${prefix}/lib
+
+    # install documents
+	xinstall -d -m 755 ${destroot}${prefix}/share/doc/${name}
+    xinstall -m 644 -W ${worksrcpath} \
+        Jam.html Jambase.html Jamfile.html README RELNOTES \
+        ${destroot}${prefix}/share/doc/${name}
 }
 
-variant mw description {Use Metrowerks compiler} {
-	patchfiles			patch-Makefile-mw.diff \
-						patch-variable.c.diff
-}
+variant mw conflicts debug \
+description {Use Metrowerks compiler} {}
 
-variant debug description {Build with no optimization and debug options} {
-	patchfiles			patch-Makefile-debug.diff \
-						patch-variable.c.diff
-
-	destroot {
-		file mkdir ${destroot}${prefix}/share/doc/${name}
-		system "install -m 755 ${worksrcpath}/bin.*/g/jam ${destroot}${prefix}/bin/"
-		system "install -m 755 ${worksrcpath}/bin.*/g/mkjambase ${destroot}${prefix}/bin/"
-		xinstall -d -m 755 ${destroot}${prefix}/share/doc/${name}/
-		xinstall -m 644 ${worksrcpath}/Jambase.html ${destroot}${prefix}/share/doc/${name}/
-		xinstall -m 644 ${worksrcpath}/Jamfile.html ${destroot}${prefix}/share/doc/${name}/
-	}
-}
+variant debug conflicts mw \
+description {Build with debug options but no optimization} {}
 
 livecheck.type	md5
 livecheck.url	ftp://ftp.perforce.com/jam/
