wireshark: revert r53872, xorg-inputproto is already a dependency of gtk2, and it's definitely not a depends_lib for wireshark
git-svn-id: https://svn.macports.org/repository/macports/trunk@73463 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/wireshark/Portfile
+++ b/dports/net/wireshark/Portfile
@@ -31,8 +31,7 @@ depends_lib 		\
 		port:gtk2 \
 		port:openssl \
 		port:libpcap \
-		port:zlib \
-		port:xorg-inputproto
+		port:zlib
 
 configure.args	\
 		--without-libsmi \
