wireshark-devel: remove xorg-inputproto dependency for the same reason it was removed from wireshark in r73463
git-svn-id: https://svn.macports.org/repository/macports/trunk@73464 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/wireshark-devel/Portfile
+++ b/dports/net/wireshark-devel/Portfile
@@ -35,8 +35,7 @@ depends_lib     port:c-ares \
                 port:gtk2 \
                 port:openssl \
                 port:libpcap \
-                port:zlib \
-                port:xorg-inputproto
+                port:zlib
 
 configure.args  \
                 --disable-usr-local \
