smartmontools: version bump to 5.40 (#27008)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73465 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/smartmontools/Portfile
+++ b/dports/sysutils/smartmontools/Portfile
@@ -3,7 +3,7 @@
 PortSystem 1.0
 
 name            smartmontools
-version         5.39.1
+version         5.40
 categories      sysutils
 maintainers     toby
 description     SMART hard drive monitoring
@@ -17,16 +17,18 @@ homepage        http://smartmontools.sourceforge.net/
 platforms       darwin
 license         GPLv2
 master_sites    sourceforge
-checksums       md5 f6f7380ae45587161c0adae8862110e9 \
-                sha1 ea0489c9234832f63ac0d4b4c0bd81133b4eb9e9 \
-                rmd160 2adb8c43eb0f23711efce423c22281240a6ed172
+checksums       md5     0f0be0239914ad87830a4fff594bda5b \
+                sha1    08a86a939a2e2cd85d2c88c09188d494f06ce050 \
+                rmd160  ff2ebfd130182ba721248ebfebd9d4d5cc325ff4
 configure.args  --mandir=${prefix}/share/man \
                 --enable-drivedb \
                 --enable-savestates \
                 --enable-attributelog \
-                --enable-sample
+                --enable-sample \
+                --with-libcap-ng=no
 
 platform darwin {
+    destroot.violate_mtree  yes
     post-destroot {
         file delete -force ${destroot}${prefix}/etc/rc.d
 
