gwenhywfar4: re-add conflict with port gwenhywfar (got unintentionally lost in previous commit when updating checksums lines)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73466 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/gwenhywfar4/Portfile
+++ b/dports/devel/gwenhywfar4/Portfile
@@ -4,6 +4,7 @@ PortSystem        1.0
 
 name              gwenhywfar4
 version           4.0.2
+revision          1
 
 # this is specific to this port and *version* for downloading it
 set release       55
@@ -22,6 +23,8 @@ distname          gwenhywfar-${version}
 checksums         md5     d9f95ad9d0bee821ad373af5a57114e7 \
                   sha1    c44fe3d5ca6cedebda412fa40200dd52d230a66d \
                   rmd160  6b932c4b2166c17104a02b220e3d7ac837f33785
+
+conflicts         gwenhywfar
 
 depends_lib       port:openssl \
                   port:libgcrypt \
