blackbox: fix build with current X11 (#27118)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73467 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/blackbox/Portfile
+++ b/dports/x11/blackbox/Portfile
@@ -29,6 +29,11 @@ depends_lib \
 	port:expat \
 	port:libiconv
 
+post-patch {
+    # the entire use of this define is questionable, but this fixes the build at least
+    reinplace "s|_XUTIL_H_|_X11_XUTIL_H_|" ${worksrcpath}/lib/Util.hh
+}
+
 configure.args  --mandir=${prefix}/share/man \
                 --x-includes=${prefix}/include \
                 --x-libraries=${prefix}/lib
