--- a/dports/science/hdf5-18/Portfile
+++ b/dports/science/hdf5-18/Portfile
@@ -6,7 +6,7 @@ PortGroup           muniversal 1.0
 
 set realname        hdf5
 name                ${realname}-18
-version             1.8.5
+version             1.8.5-patch1
 categories          science
 maintainers         mmoll openmaintainer
 
@@ -17,9 +17,9 @@ platforms           darwin
 conflicts           hdf5
 master_sites        ftp://ftp.hdfgroup.org/HDF5/current/src/ \
                     ftp://ftp.hdfgroup.org/HDF5/prev-releases/hdf5-${version}/src/
-checksums           md5     a400fe6c1c5964a7224dc684225d415c \
-                    sha1    bea643922e35ebdc1697188b7b51a3f76be58f88 \
-                    rmd160  0a5d4644c4cf5de86f1603d9f085ecd50f8385b4
+checksums           md5     27308a145e6c208d57db3f6f2634a0f6 \
+                    sha1    68a073656e3b50fca5f6c6b58956bf1531ca94f9 \
+                    rmd160  d25d51f49e77843c0b23ad36a733c664a34cda64
 distname            ${realname}-${version}
 use_bzip2           yes
 patchfiles          patch-configure.diff
