kmymoney4: new version 4.5.1, fix livecheck, temporally disable kbanking
git-svn-id: https://svn.macports.org/repository/macports/trunk@73469 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kmymoney4/Portfile
+++ b/dports/kde/kmymoney4/Portfile
@@ -7,8 +7,7 @@ PortSystem          1.0
 PortGroup           kde4    1.1
 
 name                kmymoney4
-version             4.5
-revision            4
+version             4.5.1
 
 categories          kde finance
 maintainers         mk pixilla.com:brad openmaintainer
@@ -22,14 +21,14 @@ master_sites        sourceforge:kmymoney2
 
 livecheck.type      regex
 livecheck.url       http://sourceforge.net/projects/kmymoney2/files/
-livecheck.regex     "kmymoney-(4\\.\\d+)\\.tar"
+livecheck.regex     "kmymoney-(4\\.\\d+?(\\.\\d+))\\.tar"
 
 distname            kmymoney-${version}
 use_bzip2           yes
-checksums           md5     a764fe259c7885f22a10049cef68398e \
-                    sha1    eb313afaf4f1fd406c1cbf8b80a1804bb505fc5a \
-                    rmd160  7e785192ce2b77bc4d1716c79993c5df13931bcc
 
+checksums           md5     b84e4871019a7f44848e65702c4ce3a2 \
+                    sha1    e480ff5546f0796bcb5e922459dabaad9b52cb99 \
+                    rmd160  c8861183280608233528a1ec98960d4f82a6ac3f
 
 depends_lib-append  port:libofx \
                     port:gwenhywfar4 \
@@ -46,18 +45,19 @@ This port is still EXPERIMENTAL.               \n \
 ============================================== \n \
                                                \n \
 So far known problems are:                     \n \
+ - ledger's date input field crashes app       \n \
  - some reports let the app hang               \n \
  - some fonts seem to be missing, since        \n \
-   layout looks inhomogenious                  \n \
+\ \ layout looks a little inhomogenious        \n \
                                                \n \
 ============================================== \n \
 "
 }
 
-patchfiles        patch_for_kbanking.diff
+#patchfiles        patch_to_r1197025.diff
 
 patch.dir         ${workpath}/${distname}
 patch.pre_args    -p1
 
-configure.args-append   -DENABLE_KBANKING=ON
+#configure.args-append   -DENABLE_KBANKING=ON
 
