kmymoney4: patch to avoid crash when trying to edit transaction date in ledger view
git-svn-id: https://svn.macports.org/repository/macports/trunk@73470 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/kde/kmymoney4/Portfile
+++ b/dports/kde/kmymoney4/Portfile
@@ -8,6 +8,7 @@ PortGroup           kde4    1.1
 
 name                kmymoney4
 version             4.5.1
+revision            1
 
 categories          kde finance
 maintainers         mk pixilla.com:brad openmaintainer
@@ -31,7 +32,6 @@ checksums           md5     b84e4871019a7f44848e65702c4ce3a2 \
                     rmd160  c8861183280608233528a1ec98960d4f82a6ac3f
 
 depends_lib-append  port:libofx \
-                    port:gwenhywfar4 \
                     port:aqbanking5 \
                     port:kdepimlibs4 \
                     port:oxygen-icons
@@ -54,7 +54,9 @@ So far known problems are:                     \n \
 "
 }
 
+#patchfiles        patch_for_kbanking.diff
 #patchfiles        patch_to_r1197025.diff
+patchfiles        patch-kMyMoneyDateInput_eventFilter.diff
 
 patch.dir         ${workpath}/${distname}
 patch.pre_args    -p1
