gsoap: fix livecheck; see #25434
git-svn-id: https://svn.macports.org/repository/macports/trunk@73472 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/gsoap/Portfile
+++ b/dports/devel/gsoap/Portfile
@@ -32,3 +32,7 @@ pre-configure {
 configure.args      --enable-samples
 
 use_parallel_build no
+
+livecheck.type      regex
+livecheck.url       http://sourceforge.net/projects/gsoap2/files/
+livecheck.regex     /${name}_(\[0-9.\]+)\\.
