gsoap: update to 2.7.17; see #25434 (maintainer timeout)
git-svn-id: https://svn.macports.org/repository/macports/trunk@73473 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/gsoap/Portfile
+++ b/dports/devel/gsoap/Portfile
@@ -3,8 +3,9 @@
 PortSystem 1.0
 
 name				gsoap
-version				2.7.13
+version             2.7.17
 platforms           darwin
+use_zip             yes
 distfiles			${name}_${version}${extract.suffix}
 categories			devel
 maintainers			stechert
@@ -18,18 +19,13 @@ long_description		The gSOAP toolkit is a cross-platform development \
 homepage			http://www.cs.fsu.edu/~engelen/soap.html
 master_sites			sourceforge
 master_sites.mirror_subdir	gsoap2
-checksums           md5     fffb49eb1db7ff03643a4313115dc3b1 \
-                    sha1    4c91ce860ee6853f785a11484c7298d294a53ef6 \
-                    rmd160  58f2bcd95199fdec3c5ce6579374148eaab955b1
+
+checksums           sha1    573a08ab7d8ca2d970158911482c308484fdd5ed \
+                    rmd160  3f947cbc5e1656dd82b8c6425816cfaf08063c19
 
 worksrcdir			${name}-2.7
-patchfiles          patch-configure.in patch-makemake
 
-pre-configure {
-	system "cd ${worksrcpath} && ./makemake"
-}
-
-configure.args      --enable-samples
+depends_lib         port:openssl
 
 use_parallel_build no
 
