--- a/dports/devel/ktoblzcheck/Portfile
+++ b/dports/devel/ktoblzcheck/Portfile
@@ -3,17 +3,17 @@
 PortSystem        1.0
 
 name              ktoblzcheck
-version           1.26
+version           1.29
 categories        devel finance
-maintainers       nomaintainer
+maintainers       mk openmaintainer
 description       a library to check bank account numbers and bank codes
 long_description  ${description}
 platforms         darwin
 homepage          http://ktoblzcheck.sourceforge.net/
 master_sites      sourceforge
-checksums         md5     1ea2207afd529a00152aa9df03abdb9d \
-                  sha1    ee851222b26b298275b4812ed5544f7e9b1cb7ba \
-                  rmd160  18baacea14e624a8a9c11dabd847a332d13400bc
+checksums         md5     49b3d70f8c735bfb6060edec349565c0 \
+                  sha1    930d561923e58a196a034eea10ef9ae37ae3d47f \
+                  rmd160  e53e8d41c88d68927f52d7ee246981ce91b7ed40
 depends_lib       port:python26
 patchfiles        patch-src_python_ktoblzcheck.py.diff
 configure.python  ${prefix}/bin/python2.6
