p5-soap-lite: update to 0.712, updated dependencies, indicate license, new maintainer; see #27317
git-svn-id: https://svn.macports.org/repository/macports/trunk@73475 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/perl/p5-soap-lite/Portfile
+++ b/dports/perl/p5-soap-lite/Portfile
@@ -2,19 +2,31 @@
 
 PortSystem          1.0
 PortGroup           perl5 1.0
-perl5.setup         SOAP-Lite 0.710.07
-maintainers         nomaintainer
+perl5.setup         SOAP-Lite 0.712
+license             Artistic/GPL
+maintainers         l2g.to:larry+macports
 homepage            http://www.soaplite.com/
 description         A simple interface to the Simple Object Access Protocol
 long_description    ${description}
 
 platforms           darwin
 
-checksums           md5 ca2db031c82dbb20079ff091b1d20acb
+checksums           md5     fd71a0c0feff85f670ab4b2e571652a8 \
+                    sha1    46445cdf32e245b867abf0036a83d442351475c0 \
+                    rmd160  1380a3814a323679f23fd882f5a9b779c121a9f2
 
-depends_lib-append  port:p5-xml-parser \
+# This is really a test dependency, as the name implies
+depends_build-append \
+                    port:p5-test-mockobject
+
+depends_lib-append  port:p5-class-inspector \
+                    port:p5-io-socket-ssl \
+                    port:p5-libwww-perl \
+                    port:p5-mime-base64 \
+                    port:p5-mime-tools \
+                    port:p5-task-weaken \
                     port:p5-uri \
                     port:p5-version \
-                    port:p5-libwww-perl
+                    port:p5-xml-parser
 
 supported_archs noarch
