gsoap: portfile cleanup
git-svn-id: https://svn.macports.org/repository/macports/trunk@73476 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/gsoap/Portfile
+++ b/dports/devel/gsoap/Portfile
@@ -4,9 +4,8 @@ PortSystem 1.0
 
 name				gsoap
 version             2.7.17
+set branch          [join [lrange [split ${version} .] 0 1] .]
 platforms           darwin
-use_zip             yes
-distfiles			${name}_${version}${extract.suffix}
 categories			devel
 maintainers			stechert
 description			offers an XML to C/C++ language binding to ease the \
@@ -17,13 +16,14 @@ long_description		The gSOAP toolkit is a cross-platform development \
 				native C/C++ data types. Includes stub/skeleton compiler, \
 				HTTP Web server, and much more.
 homepage			http://www.cs.fsu.edu/~engelen/soap.html
-master_sites			sourceforge
-master_sites.mirror_subdir	gsoap2
+master_sites			sourceforge:gsoap2
+
+use_zip             yes
+distname            ${name}_${version}
+worksrcdir          ${name}-${branch}
 
 checksums           sha1    573a08ab7d8ca2d970158911482c308484fdd5ed \
                     rmd160  3f947cbc5e1656dd82b8c6425816cfaf08063c19
-
-worksrcdir			${name}-2.7
 
 depends_lib         port:openssl
 
